--- a/admin.html
+++ b/admin.html
@@ -10,11 +10,11 @@
         function pushNotification() {
             let key = 'AAAAU4FzZ68:APA91bFbRKzaWX4ZqvrHTBlAUa5rO5YevPiqbo3E-PWxkHRWKAYZVZlBEwBxCHifQSd71xC6RvYGJOCubJYkJOFX6sMdxsE7bgekrKxjzJASQ-K_Slb61ARn6n8aaMxIu21HENpD1JXb:APA91bGCEOduj8HM6gP24w2LEnesqM2zkL_qx2PJUSBjjeGSdJhCrDoJf_WbT7wpQZrynHlESAoZ1VHX9Nro6W_tqpJ3Aw-A292SVe_4Ho7tJQCQxSezDCoJsnqXjoaouMYIwr34vZTs';
             let notification = {
-                title: "Bubble Nebula", 
-                body: "It's found today at 22:44", 
+                title: "test", 
+                body: "best", 
                 icon: "https://peter-gribanov.github.io/serviceworker/Bubble-Nebula.jpg", 
                 image: "https://peter-gribanov.github.io/serviceworker/Bubble-Nebula_big.jpg", 
-                click_action: "https://www.nasa.gov/feature/goddard/2016/hubble-sees-a-star-inflating-a-giant-bubble"
+                click_action: "https://www.ya.ru"
             }
             fetch('https://fcm.googleapis.com/fcm/send', {
                 method: 'POST',
