change nstance id token

--- a/admin.html
+++ b/admin.html
@@ -26,7 +26,7 @@
                     // Firebase loses 'image' from the notification.
                     // And you must see this: https://github.com/firebase/quickstart-js/issues/71
                     data: notification,
-                    to: "cfVgI3olt7o:APA91bEwyQ3VoAVSPRNJ50Zs-bx_Rz_TwK0g8xWCvNzkZ9OqyN-FfQpe0t0NS6tc4W20gbb3h4eLhyDi9DsiIlWZ4l5G2bmTsATkr3pxrIoOe4u7wwXSKFPn6jOeEi3hsYHtHqKpCxPI"
+                    to: "dVaraQts8sE:APA91bHmIqm5xkvewFtLn30A4zdB7SDAzXj3OetD9QqiCpmwbfPddOtwoGGdXMrOgTDzoWTcjLKSyTpantUJFz4YmLXc6PmA27QSnCavJkF9iMyOzssd1vymesSvyVcDpP7wQKqQ1dNp"
                 })
             }).then(function(response) {
                 return response.json();
