--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
             <form action="" method="post" class="col s12" id="notification">
                 <div class="row">
                     <div class="input-field col s12">
-                        <input type="text" name="title" id="title" value="Bubble Nebula" class="validate">
+                        <input type="text" name="title" id="title" value="title" class="validate">
                         <label for="title">Notification title</label>
                     </div>
                     <div class="input-field col s12">
-                        <input type="text" name="body" id="body" value="It's found today at 21:00" class="validate">
+                        <input type="text" name="body" id="body" value="Hello World!" class="validate">
                         <label for="body">Notification message</label>
                     </div>
                     <div class="input-field col s12">
@@ -69,7 +69,7 @@
                         <label for="image">URL to notification image</label>
                     </div>
                     <div class="input-field col s12">
-                        <input type="text" name="click_action" id="click_action" value="https://www.nasa.gov/feature/goddard/2016/hubble-sees-a-star-inflating-a-giant-bubble" class="validate">
+                        <input type="text" name="click_action" id="click_action" value="https://www.wikipedia.org" class="validate">
                         <label for="click_action">Target URL for click action</label>
                     </div>
                     <div class="input-field col s12" id="massage_row">
