--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <button type="button" class="btn-large waves-effect waves-light orange" id="register"><i class="material-icons left">vpn_key</i> Register</button>
             <button type="button" class="btn-large waves-effect waves-light orange" id="delete"><i class="material-icons left">delete</i> Delete Token</button>
         </div>
-        <div class="row" hidden>
+        <div class="row">
             <form action="" method="post" class="col s12" id="notification">
                 <div class="row">
                     <div class="input-field col s12">
