--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <title>Push notifications test</title>
     </head>
     <body>
-        <button id="get-token" onclick="getToken()">Get token</button>
-        
+        <span id="current-token"></span>
+        <button onclick="getToken()">Get token</button>
+        <button onclick="deleteToken()">Delete token</button>
+
         <script src="firebase.js"></script>
         <script src="notifications.js"></script>
     </body>
