--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <title>Push notifications test</title>
     </head>
     <body>
-        <span id="current-token"></span>
+        <div id="current-token"></div>
         <button onclick="getToken()">Get token</button>
         <button onclick="deleteToken()">Delete token</button>
 
         <script src="firebase.js"></script>
-        <script src="notifications.js"></script>
+        <!-- <script src="notifications.js"></script> -->
     </body>
 </html>
