--- a/other-side.html
+++ b/other-side.html
@@ -15,6 +15,6 @@
         <button id="send" onclick="sendNotification()">Send Notification</button>
 
         <script src="firebase.js"></script>
-        <script src="notifications.js"></script>
+        <script src="other-side.js"></script>
     </body>
 </html>
