--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <button onclick="deleteToken()">Delete token</button>
 
         <script src="firebase.js"></script>
-        <!-- <script src="notifications.js"></script> -->
+        <script src="notifications.js"></script>
     </body>
 </html>
