--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <button onclick="getToken()">Get token</button>
         <button onclick="deleteToken()">Delete token</button>
 
+        <div id="notifications-container"></div>
+
         <script src="firebase.js"></script>
         <script src="notifications.js"></script>
     </body>
