--- a/other-side.html
+++ b/other-side.html
@@ -10,6 +10,7 @@
         <input type="text" id="icon" placeholder="icon" value="https://peter-gribanov.github.io/serviceworker/Bubble-Nebula.jpg"><br>
         <input type="text" id="image" placeholder="image" value="https://peter-gribanov.github.io/serviceworker/Bubble-Nebula_big.jpg"><br>
         <input type="text" id="click-action" placeholder="click action" value="https://www.wikipedia.org"><br>
+        <input type="number" id="time-to-leave" placeholder="click action" value="60"><br>
         <br>
         <input type="text" id="token" placeholder="token"><br>
         <button id="send" onclick="sendNotification()">Send Notification</button>
